# arduino_tools

./: .agent-guard.yaml  .gitignore  AGENT_GUARD_ANALYSIS.md  AGENT_GUARD_INTEGRATION.md  CHANGELOG.md  DELIVERY.md  Embedd agent.xmind  FINAL-DELIVERY-REPORT.md  PHASE1-COMPLETION-REPORT.md  README-MULTI-AGENT.md  README.md  README_NEW.md  REFACTOR_COMPLETE.md  RELEASE_NOTES.md  SIMULATION_FILES_API.md  SIMULATION_FILES_EXAMPLES.md  SIMULATION_FILES_FEATURE.md  SIMULATION_FILES_QUICK_REFERENCE.md  build-desktop.bat  build-web.bat  package-lock.json
arduino-cli/: QUICK_TEST.md  README.md  README_V2.md  arduino-dev-v2.bat  arduino-dev-v3.bat  arduino-dev.bat  arduino_dev.py  arduino_dev_v2.py  arduino_dev_v3.py  requirements.txt
arduino-client/: .env.example  .gitignore  QUICK_START.md  README.md  pyproject.toml
arduino-client/arduino_client/: __init__.py  __main__.py  _paths.py  board_detector.py  builder.py  cli.py  cli_rich.py  client.py  code_generator.py  errors.py  installer.py  interactive.py  interactive_rich.py  llm_config.py  models.py  monitor.py  port_manager.py  requirement_analyzer.py  setup.py  simulation.py  uploader.py  wokwi_setup.py
arduino-client/arduino_client/ui/: __init__.py  board_catalog.py  console.py  serial_monitor.py  theme.py
arduino-client/arduino_client/ui/components/: __init__.py  header.py  panels.py  progress.py
arduino-client/docs/: LESSONS.md
arduino-client/docs/skills/: README.md
arduino-client/docs/skills/arduino-cli-integration/: SKILL.md
arduino-client/scripts/: add_to_path.bat  add_to_path.ps1
arduino-desktop/: BUILD_FIX.md  README.md  (+7 more)
arduino-desktop/src-tauri/: Cargo.toml  tauri.conf.json
arduino-desktop/src-tauri/icons/: icon.icns
arduino-desktop/src-tauri/src/: commands.rs  lib.rs  llm.rs  main.rs  project.rs
arduino-mcp-server/: .gitignore  CONFIGURATION.md  README.md  diagnose.py  kiro-mcp-config.json  mcp-config-template.json  pyproject.toml  pytest.ini  test_complete_flow.py  test_stability.py  test_structure.py
arduino-mcp-server/examples/: arduino-assistant-steering.md  example-conversations.md  kiro-mcp-config.json
arduino-mcp-server/src/arduino_mcp_server/: __init__.py  __main__.py  arduino_cli.py  code_generator.py  models.py  port_manager.py  server.py  templates.py  wokwi_generator.py
arduino-mcp-server/test_src/: test_basic.py  test_board_detection.py  test_full_workflow.py  test_mcp_server.py  test_pico_workflow.py  test_port_manager.py  test_serial_access.py  test_serial_monitor.py  test_wokwi.py  test_wokwi_workflow.py
arduino-mcp-server/tests/: __init__.py  conftest.py  test_ci_hardware.py  test_ci_integration.py  test_ci_unit.py
(+164 files in other folders)
